--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "diff-dom",
   "main": "diffDOM.js",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "homepage": "https://github.com/fiduswriter/diffDOM",
   "authors": [
     "Johannes Wilm <mail@johanneswilm.org>"
   ],
   "description": "A diff for DOM elements, as client-side JavaScript code. Gets all modifications, insertions and removals between two DOM fragments.",
-  "license": "LGPL",
+  "license": "LGPL-3.0",
   "ignore": [
     "**/.*",
     "node_modules",
