--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diff-dom",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "A diff for DOM elements, as client-side JavaScript code. Gets all modifications, insertions and removals between two DOM fragments.",
   "main": "diffDOM.js",
   "directories": {
@@ -14,7 +14,7 @@
     "url": "git://github.com/fiduswriter/diffDOM.git"
   },
   "author": "Johannes Wilm mail@johanneswilm.org",
-  "license": "LGPL",
+  "license": "LGPL-3.0",
   "bugs": {
     "url": "https://github.com/fiduswriter/diffDOM/issues"
   },
