update ES2015 translation

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,9 @@
   "keywords": [
     "diff",
     "dom"
-  ]
+  ],
+  "dependencies": {},
+  "devDependencies": {
+    "eslint": "^5.12.1"
+  }
 }
