--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "diff-dom",
-  "version": "2.5.1",
-  "description": "A diff for DOM elements, as client-side JavaScript code. Gets all modifications, insertions and removals between two DOM fragments.",
-  "main": "diffDOM.js",
-  "directories": {
-    "test": "tests"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint src/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/fiduswriter/diffDOM.git"
-  },
-  "author": "Johannes Wilm mail@johanneswilm.org",
-  "license": "LGPL-3.0",
-  "bugs": {
-    "url": "https://github.com/fiduswriter/diffDOM/issues"
-  },
-  "homepage": "https://github.com/fiduswriter/diffDOM",
-  "keywords": [
-    "diff",
-    "dom"
-  ],
-  "dependencies": {},
-  "devDependencies": {
-    "eslint": "^5.12.1"
-  }
+    "name": "diff-dom",
+    "version": "2.5.1",
+    "description": "A diff for DOM elements, as client-side JavaScript code. Gets all modifications, insertions and removals between two DOM fragments.",
+    "main": "diffDOM.js",
+    "directories": {
+        "test": "tests"
+    },
+    "scripts": {
+        "test": "npm run eslint",
+        "eslint": "eslint src/"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/fiduswriter/diffDOM.git"
+    },
+    "author": "Johannes Wilm mail@johanneswilm.org",
+    "license": "LGPL-3.0",
+    "bugs": {
+        "url": "https://github.com/fiduswriter/diffDOM/issues"
+    },
+    "homepage": "https://github.com/fiduswriter/diffDOM",
+    "keywords": [
+        "diff",
+        "dom"
+    ],
+    "dependencies": {},
+    "devDependencies": {
+        "eslint": "^5.12.1"
+    }
 }
